finishes implementing authentication

--- a/inesmartins.properties
+++ b/inesmartins.properties
@@ -1,4 +1,4 @@
-#Sat Jun 03 10:42:44 WEST 2017
+#Sat Jun 03 11:21:34 WEST 2017
 Username=inesmartins
-Password=bskkogjvB?
-Shift=18
+Password=CTffjbeW\# 
+Shift=13
